--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -22,7 +22,7 @@ body{
 }
 
 .jumbo{
-  background-image: url(/src/assets/img/jumbotron.jpg);
+  background-image: url(../img/jumbotron.jpg);
   background-size: cover;
   height: 400px;
 }
